# vamp-ir

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ast_to_circuit_pipeline.md  circuit.plonk  examples.md  ir_design.md  ir_spec.md  params.pp  proof.plonk  verifier.sol  verifier_aztec_verifier.sol  verifier_matter_labs.sol
.devcontainer/: Dockerfile
.github/workflows/: release.yml  test-build.yml
benches/: halo2_benches.rs  plonk_benches.rs
contracts/: data_structures.sol  pairings.sol  transcript.sol  verifier.sol  verifier_template.sol
src/: ast.rs  ast_new.rs  ast_old.rs  backend.rs  circuit.rs  error.rs  halo_synth.rs  lib.rs  llvm_transform.rs  main.rs  parser.rs  plonk_ir.pest  plonk_synth.rs  polynomial.rs  preamble.rs  string.rs  string_tests.rs  synth.rs  test.rs  transform.rs  typecheck.rs  util.rs  vampir.pest  vampir.rs
src/file_gen/: cli.rs
src/halo2/: api.rs  cli.rs  error.rs  mod.rs  synth.rs
src/plonk/: cli.rs  error.rs  mod.rs  synth.rs
src/repl/: cli.rs
src/utilities/: util.rs
tests/: alu.pir  arithmetic_aliases.pir  blake2s.pir  blake2s_G.pir  blake2s_first_step.pir  bool.pir  e2e_test.rs  easy_test.pir  fresh.pir  funcs.pir  if.pir  if16.pir  if32.pir  ints.pir  less_mod16.pir  lists.pir  poly_gate.pir  poseidon_x5_254_3.pir  poseidon_x5_254_5.pir  poseidon_x5_255_3.pir  poseidon_x5_255_5.pir  poseidon_x5_Halo2.pir  propagate.pir  public_input.pir  pyt.pir  pyth.inputs  range.pir  sha256.pir  sha256_1blocks.pir  sha256_20blocks.pir  sha256_2blocks.pir  sha256_4blocks.pir  sha256_64blocks.pir  sha256_8blocks.pir  sha256_nblocks.pir  sketch.pir  tuples.pir  xor32.pir
tests/poseidon/: poseidon_x3_255_2.pir  poseidon_x5_254_3.pir  poseidon_x5_255_3.pir  poseidon_x5_255_5.pir
