[package]
name = "vamp-ir"
version = "0.1.0"
edition = "2021"

[features]
# Enable Standard Library
std = []

[dependencies]
pest = "2.0"
pest_derive = "2.0"
ark-ff = "0.3"
ark-ec = "0.3"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-serialize = "0.3.0"
num-bigint = "^0.4.0"
bincode = "2.0.0-rc.1"
rand_core = "0.6.3"
plonk = { git = "https://github.com/ZK-Garage/plonk", rev = "ec76fd3" }
plonk-core = { git = "https://github.com/ZK-Garage/plonk", rev = "ec76fd3", features = [ "std", "trace", "trace-print" ] }
