[package]
name = "vamp-ir"
version = "0.1.0"
edition = "2021"

[features]
# Enable Standard Library
std = []

[dependencies]
pest = "2.0"
pest_derive = "2.0"
ark-ff = "0.3"
ark-ec = "0.3"
ark-bn254 = "0.3"
ark-ed-on-bn254 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-serialize = { version = "0.3.0", features = ["derive"]}
clap = { version = "4.0.17", features = [ "derive" ] }
num-bigint = "^0.4.0"
num-traits = "^0.2.14"
bincode = "2.0.0-rc.1"
rand_core = "0.6.3"
plonk = { git = "https://github.com/ZK-Garage/plonk", rev = "ec76fd36cc6b9e9d0f7a9495094e76b86e53dab4" }
plonk-core = { git = "https://github.com/ZK-Garage/plonk", rev = "ec76fd36cc6b9e9d0f7a9495094e76b86e53dab4", features = [ "std", "trace", "trace-print" ] }
